@@ -58,14 +58,17 @@ Pthreads-win32 copyrights and exception files
     is covered under the following GNU Lesser General Public License
     Copyrights:
 
-	Copyright (C) 1998  Ben Elliston and Ross Johnson
-	Copyright (C) 1999,2000,2001  Ross Johnson
+	Pthreads-win32 - POSIX Threads Library for Win32
+	Copyright(C) 1998 John E. Bossom
+	Copyright(C) 1999,2002 Pthreads-win32 contributors
 
-    Please note that the names given in the Copyright above do not
-    imply authorship of the source code. The names of all
-    substantial contributors of intellectual works incorporated
-    in the pthreads-win32 distribution are listed in the file
-    CONTRIBUTORS.
+	The current list of contributors is contained
+        in the file CONTRIBUTORS included with the source
+	code distribution. The current list of CONTRIBUTORS
+	can also be seen at the following WWW location:
+        http://sources.redhat.com/pthreads-win32/contributors.html
+
+	Contact Email: rpj@ise.canberra.edu.au
 
     These files are not covered under one of the Copyrights listed above:
 
